// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormInput renders without crashing 1`] = `
.emotion-0 {
  background: rgba(255,255,255,0.1);
  border: solid 1px;
  border-radius: 3px;
  font-size: 1.2rem;
  padding: 0.5rem 1rem;
  margin-bottom: 2rem;
  width: 100%;
}

<input
  autoComplete="off"
  className="emotion-0 emotion-1"
  data-testid="form-id"
  id="form-id"
  type="text"
/>
`;

exports[`FormInput should display an error message and associate it to the input 1`] = `
Array [
  .emotion-0 {
  background: rgba(255,255,255,0.1);
  border: solid 1px;
  border-color: #c12915;
  border-radius: 3px;
  color: #c12915;
  font-size: 1.2rem;
  padding: 0.5rem 1rem;
  margin-bottom: 2rem;
  width: 100%;
}

.emotion-0:focus {
  border-color: #c12915;
  box-shadow: 0px 0px 10px #c12915;
}

<input
    aria-describedby="error-message-label-form-id"
    autoComplete="off"
    className="emotion-0 emotion-1"
    data-testid="form-id"
    id="form-id"
    type="text"
  />,
  .emotion-0 {
  color: #c12915;
  font-size: 1.3rem;
  margin: 1rem 0;
}

<div
    className="emotion-0 emotion-1"
    id="error-message-label-form-id"
  >
    this is an error
  </div>,
]
`;

exports[`FormInput should set the noSpacing class when hasNoSpacing is set 1`] = `
.emotion-0 {
  background: rgba(255,255,255,0.1);
  border: solid 1px;
  border-radius: 3px;
  font-size: 1.2rem;
  padding: 0.5rem 1rem;
  margin-bottom: 0;
  width: 100%;
}

<input
  autoComplete="off"
  className="emotion-0 emotion-1"
  data-testid="form-id"
  id="form-id"
  type="text"
/>
`;
